--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2017 - NOW</span>
-                                <h2>UNIVERSITY</h2>
+                                <h2>COLLEGE</h2>
                                 <span class="position">Telkom University</span>
                                 <p>Currently majoring Computer Science in Telkom University.</p>
                             </div>
@@ -130,7 +130,6 @@
                                 <span class="date">2014 - 2017</span>
                                 <h2>SENIOR HIGH SCHOOL</h2>
                                 <span class="position">Depok Fourth Senior High School</span>
-                                <p>Graduated.</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -141,7 +140,6 @@
                                 <span class="date">2011 - 2014</span>
                                 <h2>JUNIOR HIGH SCHOOL</h2>
                                 <span class="position">Depok Third Junior High School</span>
-                                <p>Graduated.</p>
                             </div>
                         </div>
                     </div>
@@ -283,7 +281,7 @@
         <div class="container-fluid px-md-5">
             <div class="row justify-content-center py-5 mt-5">
                 <div class="col-md-12 heading-section text-center ftco-animate">
-                    <h2 class="mb-4">Interests</h2>
+                    <h2 class="mb-4">Interest</h2>
                 </div>
             </div>
             <div class="row">
@@ -292,7 +290,7 @@
                         <span class="icon">
 							<i class="flaticon-neural"></i>
                         </span>
-                        <h3 class="mb-5">Machine Learning</h3>
+                        <h4 class="mb-5">Machine Learning</h4>
                     </div>
                 </div>
 
@@ -301,7 +299,7 @@
                         <span class="icon">
 							<i class="flaticon-data-mining"></i>
                         </span>
-                        <h3 class="mb-5">Data Mining</h3>
+                        <h4 class="mb-5">Data Mining</h4>
                     </div>
                 </div>
 
@@ -310,7 +308,7 @@
                         <span class="icon">
 							<i class="flaticon-natural-language-processing"></i>
                         </span>
-                        <h3 class="mb-5">Natural Language Processing</h3>
+                        <h4 class="mb-5">Natural Language Processing</h4>
                     </div>
                 </div>
             </div>
@@ -332,10 +330,10 @@
                 <div class="col-md-12 text-center">
 
                     <p>
-                        Copyright &copy;
+                        &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | by Naufal Hilmiaji
+                        </script> | by Naufal Hilmiaji
                     </p>
                 </div>
             </div>
