--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="text">
                             <p class="mb-4">
                                 <span class="number" data-number="30">0</span>
-                                <span>Project complete</span>
+                                <span>Project completed</span>
                             </p>
                             <h4>More to come!</h4>
                             <p><a href="#resume-section" class="btn btn-primary py-3 px-3">Continue</a></p>
