--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><span>n</span></a>
-            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
-			</button>
+            <a class="navbar-brand" href="index.html"><img src="img/icon-p.png" width="40"></a>
+            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
+                data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about-section">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#resume-section">Personal Experiences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#interest-section">Interest</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#about-section">About Me</a></li> -->
+                </ul>
+            </div>
         </div>
     </nav>
     <section class="hero-wrap js-fullheight">
@@ -49,7 +58,8 @@
                         <span class="subheading">Hey! I am</span>
                         <h1>Naufal Hilmiaji</h1>
                         <h2>I'm a
-                            <span class="txt-rotate" data-period="50" data-rotate='[ "Coder.", "Web Developer.", "UI/UX Designer." ]'></span>
+                            <span class="txt-rotate" data-period="50"
+                                data-rotate='[ "Web Developer", "Coder", "Photographer" ]'></span>.
                         </h2>
                     </div>
                 </div>
@@ -69,7 +79,8 @@
                 <div class="col-md-6 col-lg-6 d-flex">
                     <div class="img-about img d-flex align-items-stretch">
                         <div class="overlay"></div>
-                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url('img/about.jpeg');">
+                        <div class="img d-flex align-self-stretch align-items-center"
+                            style="background-image:url('img/about.jpeg');">
                         </div>
                     </div>
                 </div>
@@ -178,13 +189,34 @@
                                     <!-- Progress bar 1 -->
                                     <div class="progress mx-auto" data-value='87'>
                                         <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
+                                            <span class="progress-bar border-primary"></span>
                                         </span>
                                         <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
+                                            <span class="progress-bar border-primary"></span>
                                         </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+                                        <div
+                                            class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
                                             <div class="h2 font-weight-bold">85<sup class="small">%</sup></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 mb-4">
+                                <div class="bg-white rounded-lg shadow p-4">
+                                    <h2 class="h5 font-weight-bold text-center mb-4">FLASK</h2>
+
+                                    <!-- Progress bar 1 -->
+                                    <div class="progress mx-auto" data-value='70'>
+                                        <span class="progress-left">
+                                            <span class="progress-bar border-primary"></span>
+                                        </span>
+                                        <span class="progress-right">
+                                            <span class="progress-bar border-primary"></span>
+                                        </span>
+                                        <div
+                                            class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+                                            <div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
                                         </div>
                                     </div>
                                 </div>
@@ -195,33 +227,15 @@
                                     <h2 class="h5 font-weight-bold text-center mb-4">JAVA</h2>
 
                                     <!-- Progress bar 1 -->
-                                    <div class="progress mx-auto" data-value='80'>
+                                    <div class="progress mx-auto" data-value='60'>
                                         <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
+                                            <span class="progress-bar border-primary"></span>
                                         </span>
                                         <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
+                                            <span class="progress-bar border-primary"></span>
                                         </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-                                            <div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">PHP</h2>
-
-                                    <!-- Progress bar 1 -->
-                                    <div class="progress mx-auto" data-value='70'>
-                                        <span class="progress-left">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <span class="progress-right">
-											<span class="progress-bar border-primary"></span>
-                                        </span>
-                                        <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+                                        <div
+                                            class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
                                             <div class="h2 font-weight-bold">60<sup class="small">%</sup></div>
                                         </div>
                                     </div>
@@ -232,10 +246,11 @@
                         <div class="row">
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>HTML + CSS</h3>
+                                    <h3>PHP</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                            <span>70%</span>
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="50"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                            <span>50%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -244,17 +259,19 @@
                                 <div class="progress-wrap ftco-animate">
                                     <h3>Javascript</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                            <span>60%</span>
+                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="60"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                            <span>40%</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>Adobe Illustrator</h3>
+                                    <h3>Photography</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-3" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                        <div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                             <span>80%</span>
                                         </div>
                                     </div>
@@ -262,9 +279,10 @@
                             </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>Premiere Pro</h3>
+                                    <h3>Music</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                             <span>70%</span>
                                         </div>
                                     </div>
@@ -277,7 +295,7 @@
         </div>
     </section>
 
-    <section class="ftco-section" id="services-section">
+    <section class="ftco-section" id="interest-section">
         <div class="container-fluid px-md-5">
             <div class="row justify-content-center py-5 mt-5">
                 <div class="col-md-12 heading-section text-center ftco-animate">
@@ -288,7 +306,7 @@
                 <div class="col-md-4 text-center d-flex ftco-animate">
                     <div class="services-1 shadow">
                         <span class="icon">
-							<i class="flaticon-neural"></i>
+                            <i class="flaticon-neural"></i>
                         </span>
                         <h4 class="mb-5">Machine Learning</h4>
                     </div>
@@ -297,7 +315,7 @@
                 <div class="col-md-4 text-center d-flex ftco-animate">
                     <div class="services-1 shadow">
                         <span class="icon">
-							<i class="flaticon-data-mining"></i>
+                            <i class="flaticon-data-mining"></i>
                         </span>
                         <h4 class="mb-5">Data Mining</h4>
                     </div>
@@ -306,7 +324,7 @@
                 <div class="col-md-4 text-center d-flex ftco-animate">
                     <div class="services-1 shadow">
                         <span class="icon">
-							<i class="flaticon-natural-language-processing"></i>
+                            <i class="flaticon-natural-language-processing"></i>
                         </span>
                         <h4 class="mb-5">Natural Language Processing</h4>
                     </div>
@@ -320,9 +338,12 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <ul class="ftco-footer-social list-unstyled">
-                        <li class="ftco-animate"><a href="https://www.linkedin.com/in/naufalhilmiaji"><span class="icon-linkedin"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.facebook.com/naufal.hilmiaji"><span class="icon-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.instagram.com/naufalhilmiaji"><span class="icon-instagram"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.linkedin.com/in/naufalhilmiaji"><span
+                                    class="icon-linkedin"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.facebook.com/naufal.hilmiaji"><span
+                                    class="icon-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.instagram.com/naufalhilmiaji"><span
+                                    class="icon-instagram"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -344,9 +365,10 @@
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-				stroke="#F96D00" /></svg></div>
+            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00" />
+        </svg></div>
 
 
     <script src="js/jquery.min.js"></script>
