--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <ul class="ftco-footer-social list-unstyled">
-                        <li class="ftco-animate"><a href="https://www.linkedin.com/in/naufalhilmiaji"><span
+                        <li class="ftco-animate"><a href="#"><span
                                     class="icon-linkedin"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.facebook.com/naufal.hilmiaji"><span
+                        <li class="ftco-animate"><a href="#"><span
                                     class="icon-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.instagram.com/naufalhilmiaji"><span
+                        <li class="ftco-animate"><a href="#"><span
                                     class="icon-instagram"></span></a></li>
                     </ul>
                 </div>
