--- a/home.html
+++ b/home.html
@@ -244,7 +244,7 @@
             </div>
         </div>
     </div>
-    <section class="photography py-lg-5 py-5 bg-light" id="photo-nav">
+    <section class="photography bg-light" id="photo-nav">
         <div class="container-fluid h-100">
             <div class="row w-lg-50 mb-3 justify-content-center text-center">
                 <h2>Photography</h2>
