--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <nav class="navbar navbar-expand-lg bg-transparent py-lg-3 navbar-queen-blue fixed-top" id="main-navbar">
     <div class="container">
-        <a href="#" class="navbar-brand">h<span id="logo_span">ilmiaji</span>.</a>
+        <a href="#" class="navbar-brand">h<span id="logo_span">ilmiaji</span>_</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-list"
@@ -35,9 +35,9 @@
                 <li class="nav-item int-nav">
                     <a href="#int-nav" class="nav-link">Interests</a>
                 </li>
-                <!-- <li class="nav-item port-nav">
-                    <a href="#port-nav" class="nav-link">Portfolio</a>
-                </li> -->
+                <li class="nav-item photo-nav">
+                    <a href="#photo-nav" class="nav-link">Photography</a>
+                </li>
                 <li class="nav-item con-nav">
                     <a href="#con-nav" class="nav-link">Contact</a>
                 </li>
@@ -140,7 +140,7 @@
                     </div>
                     <a href="assets/docs/My Curriculum Vitae.pdf" class="btn btn-primary" id="download_btn"
                         download>Download CV</a>
-                    <a href="#" class="btn btn-secondary" id="hire_btn" download>Hire Me!</a>
+                    <a href="#con-nav" class="btn btn-secondary" id="hire_btn">Hire Me!</a>
                 </div>
             </div>
         </div>
@@ -205,34 +205,28 @@
             </div>
             <div class="row w-lg-l00 py-3 mx-lg-3 justify-content-lg-center" id="int-row">
                 <div class="col-lg-4 col-md-8 col-10">
-                    <a href="#" style="text-decoration: none;">
                         <div class="card h-100 mb-3 mx-lg-auto">
                             <img src="assets/icons/web-development.png" class="card-img-top icons" alt="int-pictures">
                             <div class="card-body p-0 d-flex align-items-center justify-content-center">
                                 <h2>Web Development</h2>
                             </div>
                         </div>
-                    </a>
                 </div>
                 <div class="col-lg-4 col-md-8 col-10">
-                    <a href="#" style="text-decoration: none;">
                         <div class="card h-100 mb-3 mx-lg-auto">
                             <img src="assets/icons/analysis.png" class="card-img-top icons" alt="int-pictures">
                             <div class="card-body p-0 d-flex align-items-center justify-content-center">
                                 <h2>Data Science</h2>
                             </div>
                         </div>
-                    </a>
                 </div>
                 <div class="col-lg-4 col-md-8 col-10">
-                    <a href="#photo-nav" style="text-decoration: none;">
                         <div class="card h-100 mb-3 mx-lg-auto">
                             <img src="assets/icons/nlp.png" class="card-img-top icons" alt="int-pictures">
                             <div class="card-body p-0 d-flex align-items-center justify-content-center">
                                 <h2>Machine Learning</h2>
                             </div>
                         </div>
-                    </a>
                 </div>
             </div>
         </div>
@@ -250,7 +244,7 @@
             </div>
         </div>
     </div>
-    <section class="photography py-lg-5 py-5" id="photo-nav">
+    <section class="photography bg-light" id="photo-nav">
         <div class="container-fluid h-100">
             <div class="row w-lg-50 mb-3 justify-content-center text-center">
                 <h2>Photography</h2>
@@ -345,28 +339,23 @@
         </div>
     </section>
 
-    <section class="contact py-lg-5 py-3">
+    <section class="contact py-lg-5 py-3 bg-light" id="con-nav">
         <div class="container h-100">
             <div class="row w-lg-50 mb-3 justify-content-center text-center">
                 <h2>Contact</h2>
                 <line>1234567890123</line>
             </div>
             <div class="row mb-3 text-center d-flex justify-content-center" id="con-row">
-                <div class="col-lg-10 col">
-                    <form>
+                <div class="col-lg-6">
+                    <form action="mailto:nhilmiaji@gmail.com" method="post" enctype="text/plain">
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                            <label for="email-field" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email-field"
+                                placeholder="youremail@example.com">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            <label for="message-field" class="form-label">Message:</label>
+                            <textarea class="form-control" id="message-field" rows="5"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -374,6 +363,40 @@
             </div>
         </div>
     </section>
+
+    <footer class="bg-primary text-light">
+        <div class="container">
+            <div class="row py-3 d-flex align-items-start text-center" id="foot-row1">
+                <div class="col">
+                    <h1 class="footer-brand" style="font-family: 'Space Mono', monospace !important;">hilmiaji_</h1>
+                </div>
+                    <!-- <div class="row d-flex">
+                        <div class="col-8">
+                            <p><span class="fw-bold">Address:</span> GDC Sektor Anggrek 3 Blok
+                                E1/25, Depok</p>
+                        </div>
+                        <div class="col-4 text-end">
+                            Test
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+            <div class="row py-1 d-flex align-items-center justify-content-center text-center" id="foot-row2">
+                <div class="row d-flex justify-content-center" id="foot-row2">
+                    <div class="col" id="footer-socials">
+                        <ul>
+                            <li><a href="https://www.instagram.com/naufalhilmiaji/"><i class="bi bi-instagram h2 text-light"></i></a></li>
+                            <li><a href="https://www.facebook.com/hilmiajinaufal/"><i class="bi bi-facebook h2 text-light"></i></a></i>
+                            </li>
+                            <li><a href="https://www.linkedin.com/in/naufalhilmiaji/"><i class="bi bi-linkedin h2 text-light"></i></a></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <p>Copyright &copy; 2021 by Naufal Hilmiaji</p>
+            </div>
+        </div>
+    </footer>
 
     <!-- JS Plugins -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
