--- a/index.html
+++ b/index.html
@@ -232,8 +232,6 @@
         </div>
     </section>
 
-
-
     <div class="modal fade" id="modal-showimg" tabindex="-1" aria-labelledby="modal-showimg-label" aria-hidden="true"
         style="padding-right: 0 !important">
         <div class="modal-dialog modal-dialog-centered modal-xl">
@@ -370,31 +368,25 @@
                 <div class="col">
                     <h1 class="footer-brand" style="font-family: 'Space Mono', monospace !important;">hilmiaji_</h1>
                 </div>
-                    <!-- <div class="row d-flex">
-                        <div class="col-8">
-                            <p><span class="fw-bold">Address:</span> GDC Sektor Anggrek 3 Blok
-                                E1/25, Depok</p>
-                        </div>
-                        <div class="col-4 text-end">
-                            Test
-                        </div>
-                    </div> -->
-                </div>
             </div>
-            <div class="row py-1 d-flex align-items-center justify-content-center text-center" id="foot-row2">
+            <div class="row py-1 d-flex align-items-center justify-content-center text-center">
                 <div class="row d-flex justify-content-center" id="foot-row2">
                     <div class="col" id="footer-socials">
                         <ul>
-                            <li><a href="https://www.instagram.com/naufalhilmiaji/"><i class="bi bi-instagram h2 text-light"></i></a></li>
-                            <li><a href="https://www.facebook.com/hilmiajinaufal/"><i class="bi bi-facebook h2 text-light"></i></a></i>
+                            <li><a href="https://www.instagram.com/naufalhilmiaji/"><i
+                                        class="bi bi-instagram h2 text-light"></i></a></li>
+                            <li><a href="https://www.facebook.com/hilmiajinaufal/"><i
+                                        class="bi bi-facebook h2 text-light"></i></a></i>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/naufalhilmiaji/"><i class="bi bi-linkedin h2 text-light"></i></a></i>
+                            <li><a href="https://www.linkedin.com/in/naufalhilmiaji/"><i
+                                        class="bi bi-linkedin h2 text-light"></i></a></i>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <p>Copyright &copy; 2021 by Naufal Hilmiaji</p>
             </div>
+        </div>
         </div>
     </footer>
 
