--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Naufal Hilmiaji</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<nav class="navbar navbar-expand-lg bg-transparent py-lg-3 navbar-queen-blue fixed-top" id="main-navbar">
+<nav class="navbar navbar-expand-lg py-lg-3 bg-transparent navbar-queen-blue fixed-top" id="main-navbar">
     <div class="container">
         <a href="#" class="navbar-brand">h<span id="logo_span">ilmiaji</span>_</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
@@ -47,10 +47,18 @@
 </nav>
 
 <body>
-    <header class="page_header bg-palette4-periwinkle-crayola text-palette4-dark-blue">
-        <div class="container d-flex h-100 w-100 align-items-center justify-content-center" id="photo">
+    <header class="page_header" id=page-header>
+        <div class="container d-flex h-100 w-100 align-items-center justify-content-center photo-light" id="photo">
 
-            <div class="socials">
+            <div class="dark-mode-toggler" id="dark-switcher">
+                <a href="#!" onclick="darkToggler()"><i class="bi bi-moon-fill h2"></i></a>
+            </div>
+
+            <div class="light-mode-toggler" onclick="lightToggler()" id="light-switcher">
+                <a href="#!"><i class="bi bi-sun-fill h2"></i></a>
+            </div>
+
+            <div class="socials" id="social-menu">
                 <ul>
                     <li><a href="https://www.instagram.com/naufalhilmiaji/"><i class="bi bi-instagram h2"></i></a></li>
                     <li><a href="https://www.facebook.com/hilmiajinaufal/"><i class="bi bi-facebook h2"></i></a></i>
@@ -68,7 +76,7 @@
                         <h5>I'm a <span id="webdev_span">Web Developer.</span></h5>
                     </div>
                     <div class="row justify-content-lg-start justify-content-center">
-                        <div class="col-lg-6 col-9 bg-palette4-queen-blue text-palette4-periwinkle-crayola py-3 ms-lg-2"
+                        <!-- <div class="col-lg-6 col-9 bg-palette4-queen-blue text-palette4-periwinkle-crayola py-3 ms-lg-2"
                             id="project-text">
                             <div class="row align-items-center">
                                 <div class="col-lg-3 col-3 px-0 text-center">
@@ -76,16 +84,6 @@
                                 </div>
                                 <div class="col-lg-9 col-9 px-0 text-center">
                                     <h5>Projects Completed</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="col-lg-3 col-5 bg-indigo text-light py-3 ms-lg-3 ms-2">
-                            <div class="row align-items-center">
-                                <div class="col-4 px-0 text-center">
-                                    <h2>12</h2>
-                                </div>
-                                <div class="col-8 px-0 text-center">
-                                    <p>Projects Completed</p>
                                 </div>
                             </div>
                         </div> -->
@@ -205,28 +203,28 @@
             </div>
             <div class="row w-lg-l00 py-3 mx-lg-3 justify-content-lg-center" id="int-row">
                 <div class="col-lg-4 col-md-8 col-10">
-                        <div class="card h-100 mb-3 mx-lg-auto">
-                            <img src="assets/icons/web-development.png" class="card-img-top icons" alt="int-pictures">
-                            <div class="card-body p-0 d-flex align-items-center justify-content-center">
-                                <h2>Web Development</h2>
-                            </div>
+                    <div class="card h-100 mb-3 mx-lg-auto">
+                        <img src="assets/icons/web-development.png" class="card-img-top icons" alt="int-pictures">
+                        <div class="card-body p-0 d-flex align-items-center justify-content-center">
+                            <h2>Web Development</h2>
                         </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-10">
-                        <div class="card h-100 mb-3 mx-lg-auto">
-                            <img src="assets/icons/analysis.png" class="card-img-top icons" alt="int-pictures">
-                            <div class="card-body p-0 d-flex align-items-center justify-content-center">
-                                <h2>Data Science</h2>
-                            </div>
+                    <div class="card h-100 mb-3 mx-lg-auto">
+                        <img src="assets/icons/nlp.png" class="card-img-top icons" alt="int-pictures">
+                        <div class="card-body p-0 d-flex align-items-center justify-content-center">
+                            <h2>Machine Learning</h2>
                         </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-10">
-                        <div class="card h-100 mb-3 mx-lg-auto">
-                            <img src="assets/icons/nlp.png" class="card-img-top icons" alt="int-pictures">
-                            <div class="card-body p-0 d-flex align-items-center justify-content-center">
-                                <h2>Machine Learning</h2>
-                            </div>
+                    <div class="card h-100 mb-3 mx-lg-auto">
+                        <img src="assets/icons/analysis.png" class="card-img-top icons" alt="int-pictures">
+                        <div class="card-body p-0 d-flex align-items-center justify-content-center">
+                            <h2>Data Science</h2>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -248,7 +246,7 @@
                 <h2>Photography</h2>
                 <line>1234567890123</line>
             </div>
-            <div class="row mb-3 text-center" id="photo-row">
+            <div class="row text-center" id="photo-row">
                 <div class="col-lg-4 col-md-8 col-10 p-lg-0 mx-lg-auto">
                     <div class="img-container">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modal-showimg" id="5"
@@ -362,7 +360,7 @@
         </div>
     </section>
 
-    <footer class="bg-primary text-light">
+    <footer class="bg-primary text-light" id="footer">
         <div class="container">
             <div class="row py-3 d-flex align-items-start text-center" id="foot-row1">
                 <div class="col">
@@ -371,7 +369,7 @@
             </div>
             <div class="row py-1 d-flex align-items-center justify-content-center text-center">
                 <div class="row d-flex justify-content-center" id="foot-row2">
-                    <div class="col" id="footer-socials">
+                    <div class="col col-socials" id="footer-socials">
                         <ul>
                             <li><a href="https://www.instagram.com/naufalhilmiaji/"><i
                                         class="bi bi-instagram h2 text-light"></i></a></li>
