--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
         </div>
     </div>
-    <section class="photography bg-light" id="photo-nav">
+    <section class="photography py-lg-5 py-3 bg-light" id="photo-nav">
         <div class="container-fluid h-100">
             <div class="row w-lg-50 mb-3 justify-content-center text-center">
                 <h2>Photography</h2>
@@ -353,7 +353,7 @@
                             <label for="message-field" class="form-label">Message:</label>
                             <textarea class="form-control" id="message-field" rows="5"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary" id="send-btn">Send</button>
                     </form>
                 </div>
             </div>
