--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Naufal Hilmiaji</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<nav class="navbar navbar-expand-lg py-lg-3 bg-transparent navbar-queen-blue fixed-top" id="main-navbar">
+<nav class="navbar navbar-expand-lg py-lg-3 bg-transparent navbar-queen-blue fixed-top light-mode" id="main-navbar">
     <div class="container">
         <a href="#" class="navbar-brand">h<span id="logo_span">ilmiaji</span>_</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
             <span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-list"
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#356CAB" class="bi bi-list"
                     viewBox="0 0 16 16" id="svg_nav">
                     <path fill-rule="evenodd"
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
