--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#!" onclick="darkToggler()"><i class="bi bi-moon-fill h2"></i></a>
             </div>
 
-            <div class="light-mode-toggler" onclick="lightToggler()" id="light-switcher">
+            <div class="light-mode-toggler" onclick="lightToggler()" id="light-switcher" style="display: none;">
                 <a href="#!"><i class="bi bi-sun-fill h2"></i></a>
             </div>
 
