removing 'hire me' button

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <a href="assets/docs/My Curriculum Vitae.pdf" class="btn btn-primary" id="download_btn"
                         download>Download CV</a>
-                    <a href="#con-nav" class="btn btn-secondary" id="hire_btn">Hire Me!</a>
+                    <!-- <a href="#con-nav" class="btn btn-secondary" id="hire_btn">Hire Me!</a> -->
                 </div>
             </div>
         </div>
